--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <header>
 <h1>Vakantie in Nijmegen</h1>
 <nav>
-<img src=img/valkhof.jpg alt=logo width=100 height=50> | <a href=galerij.htm>galerij</a> | <a href=#>stadswandelingen</a> | <a href=#>uitgaan</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
+<img src=valkhof.jpg alt=logo width=100 height=50> | <a href=galerij.htm>galerij</a> | <a href=#>stadswandelingen</a> | <a href=#>uitgaan</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
 </nav>
 </header>
 <article id=valkhof><h2>De Valkhof</h2>
