--- a/galerij.htm
+++ b/galerij.htm
@@ -16,7 +16,13 @@ Hier komen allerlei links naar andere delen van de website.
 <h2>Attracties</h2>
 </header>
 <div id=main-content>
-<img src=img/valkhof.jpg width=750 alt="Het Valkhof zoals het in de zeventiende eeuw was. Schilderij van Jan van Goyen" >
+<img src=img/valkhof.jpg width=750 alt="Het Valkhof zoals het in de zeventiende eeuw was. Schilderij van Jan van Goyen">
+<br>
+<img src=img/nijm_valkhofst.jpg alt="Het Valkhof van beneden gezien">
+<br>
+<img src=nijmegen_stnicolaaskapel001.jpg alt="De Sint Nicolaaskapel"><br>
+Over enige tijd neemt de naamgever van de kapel hier tijdelijk zijn intrek bij zijn bezoek aan Nijmegen.
+<br>
 <br> Het is heel goed mogelijk dat de browser, wanneer ik wat meer tekst typ, zelf met de suggestie komt dat we hier met een tekst in het Nederlands te maken hebben. Dat neemt niet weg dat het ook dan aangeraden wordt om het lang attribuut te gebruiken in de html-tag.
 </div>
 Hier staat dan wat minder belangrijke informatie, maar het blijft behoren tot hetzelfde artikel.
