--- a/galerij.htm
+++ b/galerij.htm
@@ -25,7 +25,10 @@ Over enige tijd neemt de naamgever van de kapel hier tijdelijk zijn intrek bij z
 <br>
 <br> Het is heel goed mogelijk dat de browser, wanneer ik wat meer tekst typ, zelf met de suggestie komt dat we hier met een tekst in het Nederlands te maken hebben. Dat neemt niet weg dat het ook dan aangeraden wordt om het lang attribuut te gebruiken in de html-tag.
 </div>
-Hier staat dan wat minder belangrijke informatie, maar het blijft behoren tot hetzelfde artikel.
+Hier staat dan wat minder belangrijke informatie, maar het blijft behoren tot hetzelfde artikel.<br>
+<h4>
+Hier staat het geluidsbestand, dat verder nergens op slaat.</h4>
+<audio controls src=https://file-examples.com/storage/fe8c7eef0c6364f6c9504cc/2017/11/file_example_OOG_1MG.ogg></audio>
 </article>
 terug naar de <a href=index.html>beginpagina</a>
 <footer>
