--- a/index.html
+++ b/index.html
@@ -27,9 +27,12 @@
 <body>
 <header>
 <h1>Vakantie in Nijmegen</h1>
+<img src=img/valkhof.jpg alt=logo width=100 height=50><hr>
 <nav>
-<img src=img/valkhof.jpg alt=logo width=100 height=50> | <a href=galerij.htm>galerij</a> | <a href=info.htm>de Sint Nicolaaskapel</a> | <a href=info.htm>info Sint Nicolaaskapel</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
+<a href=galerij.htm>galerij</a> | <a href=info.htm>de Sint Nicolaaskapel</a> | 
+<a href=info.htm>info Sint Nicolaaskapel</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
 </nav>
+<hr>
 </header>
 <article id=valkhof><h2>Nijmegen</h2>
 <iframe src=https://www.valkhof.nl/ width=500 height=200></iframe>
@@ -39,12 +42,6 @@ Hoewel Nijmegen niet direct aan de grens met Duitsland ligt - de gemeente Berg e
 <section><h3>De Stevenskerk</h3>
 Wie Nijmegen met de trein vanuit het noorden nadert, wordt direct getroffen door de Stevenstoren, die hoog boven de rest van de bebouwing uittorent.
 </section>
-<div><!-- hier is een link naar een aantal pianoconcerten van Mozart -->
-<iframe style="width:560px; height:315px;" src=https://www.youtube.com/embed/jvRhkZLM__E title="YouTube video player"  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-</article>
-<!-- Download het pdf-bestand <a href=Kennismaken-met-Calc.pdf>Kennismaken met Calc</a><br> --><hr>
-<iframe src=Kennismaken-met-Calc.pdf width=200 height=200></iframe>
 <footer>&copy; Erik Haan<br>
 <a href=mailto:erikjurgenhaan@gmail.com>mail</a>
 </footer>
