--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 <h1>Vakantie in Nijmegen</h1>
 <img src=img/valkhof.jpg alt=logo width=100 height=50><hr>
 <nav>
-<a href=galerij.htm>galerij</a> | <a href=info.htm>de Sint Nicolaaskapel</a> | 
-<a href=info.htm>info Sint Nicolaaskapel</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
+<a href=galerij.htm>galerij</a> | <a href=info.htm>de Sint Nicolaaskapel</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
 </nav>
 <hr>
 </header>
