--- a/galerij.htm
+++ b/galerij.htm
@@ -13,11 +13,12 @@ Hier komen allerlei links naar andere delen van de website.
 </aside>
 <article>
 <header>
-<h2>Attracties</h2>
+<h2>De top van Nijmegen: de Sint Nicolaas-kapel</h2>
 </header>
 <div id=main-content>
 <img src=img/valkhof.jpg width=750 alt="Het Valkhof zoals het in de zeventiende eeuw was. Schilderij van Jan van Goyen">
 <br>
+Op dit schilderij van Jan van Goyen is de Valkhof nog in al zijn glorie te zien. Nu is alleen de Valkhof-kapel of de Sint Nicolaaskapel hiervan over. Het zicht is naar het oosten, tegenwoordig is vanuit hetzelfde gezichtspunt de Waalbrug gezichtsbepalend.<br>
 <img src=img/nijm_valkhofst.jpg width=750 alt="Het Valkhof van beneden gezien">
 <br>
 <img src=img/nijmegen_stnicolaaskapel001.jpg width=750 alt="De Sint Nicolaaskapel"><br>
