--- a/les12.htm
+++ b/les12.htm
@@ -16,27 +16,27 @@ In een header waar nog een heleboel aan moet gebeuren, maar niet in deze opdrach
 <table>
  <tr>
   <td id=cf23>Vooral</td>
-  <td id=cf34><img src=img/atalantaopvlinderstruik01.jpg width=100 alt="Atalantavlinder op vlinderstruik"></td>
+  <td id=cf34><img src=img/atalantaopvlinderstruik01.JPG width=100 alt="Atalantavlinder op vlinderstruik"></td>
   <td id=cf45>Veel</td>
-  <td id=cf56><img src=img/badbentheim200.jpg width=100 alt="Bad Bentheim"></td>
+  <td id=cf56><img src=img/badbentheim200.JPG width=100 alt="Bad Bentheim"></td>
  </tr>
 <tr>
   <td id=ca67>Laroov</td>
-  <td id=ca78><img src=img/blikopdehemel150.jpg width=120 alt="Blik op de hemel"></td>
+  <td id=ca78><img src=img/blikopdehemel150.JPG width=120 alt="Blik op de hemel"></td>
   <td id=ca89>Leev</td>
-  <td id=ca90><img src=img/blikopnijmegen151.jpg width=120 alt="Blik op Nijmegen"></td>
+  <td id=ca90><img src=img/blikopnijmegen151.JPG width=120 alt="Blik op Nijmegen"></td>
  </tr>
  <tr>
   <td id=cd10>Super</td>
-  <td id=cd20><img src=img/Boulogne-sur-Mer_Nicolaaskerk.jpg width=120 alt="Boulogne sur Mer - Nicolaaskerk"></td>
+  <td id=cd20><img src=img/Boulogne-sur-Mer_Nicolaaskerk.JPG width=120 alt="Boulogne sur Mer - Nicolaaskerk"></td>
   <td id=cd30>Goed</td>
-  <td id=cd40><img src=img/deventer200.jpg width=120 alt="Deventer, Lebuinuskerk"></td>
+  <td id=cd40><img src=img/deventer200.JPG width=120 alt="Deventer, Lebuinuskerk"></td>
  </tr>
  <tr>
   <td id=cedc>Repus</td>
-  <td id=cdcb><img src=img/HeeswijkDinther_kasteel01.jpg width=120 alt="Kasteel van Heeswijk-Dinther"></td>
+  <td id=cdcb><img src=img/HeeswijkDinther_kasteel01.JPG width=120 alt="Kasteel van Heeswijk-Dinther"></td>
   <td id=cba>Deog</td>
-  <td id=cba0><img src=img/hortensia200.jpg width=120 alt="Hortensia in volle bloei"></td>
+  <td id=cba0><img src=img/hortensia200.JPG width=120 alt="Hortensia in volle bloei"></td>
  </tr>
  </table>
 <div>
