--- a/index.html
+++ b/index.html
@@ -1,49 +1,28 @@
 <!DOCTYPE html>
 <html lang=nl-NL>
 <head>
-<meta charset=utf-8>
-<meta name=description content="Bezienswaardigheden in Nijmegen, leuke dingen, stadswandelingen">
-<meta name=keywords content="toerisme, Nijmegen, bezienswaardigheden, uitgaan, stadswandelingen">
-<meta name=author content="Erik Haan">
-<title>Attracties in Nijmegen</title>
+ <meta charset=utf-8>
+ <meta name=author content="Erik Haan">
+ <meta name=description content=index>
+ <meta name=keywords content="les 15">
+ <meta name=viewport content="width=device-width, initial-scale=1">
+ <link rel=stylesheet href=stijl.css>
+ <title>Index van huiswerkopdracht les 15</title>
 </head>
-<!-- maak drie HTML-bestanden: index.html, galerij.htm, info.htm.
-- Zorg dat alle bestanden voldoen aan de volledige HTML5-documentstructuur, ook wanneer u niet alle elementen gaat gebruiken.
-- Plaats een logo in de header. Heeft de attractie geen logo? Maak er dan zelf een door een afbeelding te plaatsen met een <h1> tekst erbij.
-- Plaats onder het logo een simpel menu (bestaande uit koppelingen naar drie pagina's)
-- vul de pagina 'index.html' op de volgende manier:
-	* korte omschrijving van de attractie zelf geschreven of gekopieerd met bronvermelding;
-	* onder de tekst staat een <iframe> met daarin een weergave van de officiele website van de attractie. Heeft de attractie geen website? Plaats dan de wikipedia-pagina over de attractie of de website van de gemeente waar u woont.
-- Vul de pagina 'galerij.htm' op de volgende manier:
-	* de pagina bevat minimaal drie afbeeldingen van de attractie;
-	* onder de afbeeldingen staat een geluidsbestand naar keuze.
-- Vul de pagina 'info.htm' op de volgende manier:
-	* op de pagina staan de openingstijden van de attractie en eventuele andere relevante informatie, zoals een routebeschrijving en/of entreeprijzen;
-	* onder de informatie staan minimaal twee YouTube video's met beelden van de attractie (of YouTube video's naar keuze);
-- zet de pagina online met behulp van GitHub
-- de url van mijn pagina is https://teutoon.github.io/arminius/index.html
-- Plak de link in een worddocument
-- Stuur het worddocument via Plaza naar uw docent. -->
 <body>
 <header>
-<h1>Vakantie in Nijmegen</h1>
-<img src=img/valkhof.jpg alt=logo width=100 height=50><hr>
-<nav>
-<a href=galerij.htm>galerij</a> | <a href=info.htm>de Sint Nicolaaskapel</a> | <a href=mailto:erikjurgenhaan@gmail.com>contact</a>
-</nav>
-<hr>
+ <h1>navigatie</h1>
+ <a href=mijncv.htm><button type=button class=button>mijn cv</button></a> | <a href=contact.htm><button type=button class=button>contact</button></a>
 </header>
-<article id=valkhof><h2>Nijmegen</h2>
-<iframe src=https://www.valkhof.nl/ width=500 height=200></iframe>
-<section><h3>Nijmegen: een grote grensstad.</h3>
-Hoewel Nijmegen niet direct aan de grens met Duitsland ligt - de gemeente Berg en Dal ligt er nog tussen - is Duitse invloed duidelijk merkbaar. Niet alleen vind je in het straatbeeld veel Duitse auto's, met name met KLE van de eerste redelijk grote stad over de grens, Kleef in het Nederlands en Kleve in het Duits, in de kentekenborden, ook in straatnamen in het centrum als Duivengas en Ottengas herken je Duitse woorden. 
-</section>
-<section><h3>De Stevenskerk</h3>
-Wie Nijmegen met de trein vanuit het noorden nadert, wordt direct getroffen door de Stevenstoren, die hoog boven de rest van de bebouwing uittorent.
-</section>
-<footer>&copy; Erik Haan<br>
-<a href=mailto:erikjurgenhaan@gmail.com>mail</a>
+<article>
+ <h2>Inleiding</h2>
+ <p>Elst is een plaats in de gemeente Overbetuwe in de Betuwe, gelegen tussen Nijmegen en Arnhem. In de Romeinse tijd bevond zich hier een groot tempelcomplex, waarvan resten onder de huidige Grote Kerk gevonden zijn. Daarnaast is Elst de naamgever van de bekende appelen, de Elstar.
+ </p>
+ <img src=elst_grotekerk.JPG width=400px alt="Grote Kerk van Elst"><br>
+ De Grote Kerk van Elst.
+</article>
+<footer>hier komen alle gegevens die in een normale footer staan.<br>
+&copy; Erik Haan
 </footer>
-
 </body>
 </html>
