--- a/huiswerkopgaveles18.htm
+++ b/huiswerkopgaveles18.htm
@@ -39,7 +39,7 @@ padding: 15px
 background-color: olive;
 color: white;
 padding: 15px;
-background-image: url(img/blikopnijmegen151.JPG);
+background-image: url(/img/blikopnijmegen151.JPG);
 }
 .menu ul {
 list-style-type: none;
@@ -84,12 +84,12 @@ img {
 <div class=col-9>
 <h1>Welkom</h1>
 <article>
-<img src=img/grave001.jpg alt="Centrum van Grave">
+<img src=/img/grave001.jpg alt="Centrum van Grave">
 <p>Nijmegen ligt op een kruispunt van drie provincies en twee landen. Niet ver naar het oosten vind je de grens met Duitsland. Een klein stukje naar het zuiden en je bent in Limburg, een klein stukje naar het westen en je steekt de Maas over naar Noord-Brabant. De eerste stad die je dan tegenkomt is Ravenstein. Ravenstein is gelegen aan de Maas en neemt ten tijde van de Republiek een bijzondere plaats in.</p>
 Een stukje naar het zuid-westen en je komt in het kleine, maar charmante Grave, eveneens geleven aan de Maas. Grave is de hoofdstad van het Land van Cuijk. Rechts ziet u een deel van het centrum van Grave.</p>
 </article>
 <article>
-<img src=img/ijsselbijbronkhorst.jpg alt="IJssel bij Bronkhorst">
+<img src=/img/ijsselbijbronkhorst.jpg alt="IJssel bij Bronkhorst">
 <p>Bij een bezoek aan Nijmegen moet u ook zeker een kijkje nemen in het museum Het Valkhof.<br>
 Rechts ziet u niet een foto van het Valkhof of zelfs maar een foto van Nijmegen, nee, rechts ziet u een foto van de IJssel bij Bronkhorst.
 </p>
