--- a/index.html
+++ b/index.html
@@ -3,26 +3,94 @@
 <head>
  <meta charset=utf-8>
  <meta name=author content="Erik Haan">
- <meta name=description content=index>
- <meta name=keywords content="les 15">
+ <meta name=description content=#>
+ <meta name=keywords content=#>
  <meta name=viewport content="width=device-width, initial-scale=1">
- <link rel=stylesheet href=stijl.css>
- <title>Index van huiswerkopdracht les 15</title>
+<!-- Bootstrap-CSS -->
+<link
+href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css
+rel=stylesheet
+integrity=sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl
+crossorigin=anonymous>
+ <title>Huiswerkopgave les 22</title>
+<style>
+ .red {
+  background: red;
+  height: 200px;
+}
+img {
+ height: 5%;
+}
+</style>
 </head>
 <body>
 <header>
- <h1>navigatie</h1>
- <a href=mijncv.htm><button type=button class=button>mijn cv</button></a> | <a href=contact.htm><button type=button class=button>contact</button></a>
+ <h1>Welkom op mijn startpagina</h1>
+ <nav><a href=overmij.htm class="btn btn-lg btn-secondary fw-bold border-green bg-blue">Over mij</a> | 
+   <a href=contact.htm class="btn btn-lg btn-secondary fw-bold border-green bg-blue">
+Contact</a></nav>
 </header>
+<div class=container-sm>
+ <div class=row>
+  <div class=col-sm-2>
+   Hier zou ik al een aantal dingen over mijzelf kunnen zetten, maar ik doe dat niet, want ik vind het leuker om dat in het bestandje 'over mij' te doen. Wanneer je dus meer over mij wilt weten - en wie wil dat niet? - dan nodig ik je uit om op de bovenste knop te klikken: 'over mij'.<br>
+Scroll verder door naar beneden, ik slaag er niet in om de rijen mooi op elkaar aan te laten sluiten en ik heb nu geen zin om uit te zoeken hoe ik dat voor elkaar krijg.
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/ijsselbijbronkhorst.jpg alt=Rivierenlandschap>
+   De IJssel bij Bronkhorst.
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/amaryllis023.jpg alt=Amaryllis>
+   Amaryllis.
+  </div>
+  <div class=col-sm-4>
+   <img src=../img/nijmegen222.jpg alt="Maas Waal Kanaal bij Nijmegen">
+   Maas-Waal Kanaal bij Nijmegen.
+  </div>
+ </div>
+ <div class=row>
+  <div class=col-sm-2>
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/forsythia.jpg alt=Forsythia>
+   Forsythia.
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/oleanderzaaddoos.jpg alt="Zaadoos van de oleander">
+   Zaaddoos van de oleander.
+  </div>
+  <div class=col-sm-4>
+   <img src=../img/sintjandenbosch222.jpg alt="Sint Jan Den Bosch">
+   De Sint Jan in Den Bosch.
+  </div>
+ </div>
+ <div class=row>
+  <div class=col-sm-2>
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/bloesem002.jpg alt=Bloesem>
+   Lente in het land.
+  </div>
+  <div class=col-sm-3>
+   <img src=../img/oleander024.jpg alt=Oleander>
+   Oleander in de winter.
+  </div>
+  <div class=col-sm-4>
+   <img src=../img/denbosch222.jpg alt="Den Bosch">
+   Marktplein in Den Bosch.
+  </div>
+ </div>
+</div>
 <article>
- <h2>Inleiding</h2>
- <p>Elst is een plaats in de gemeente Overbetuwe in de Betuwe, gelegen tussen Nijmegen en Arnhem. In de Romeinse tijd bevond zich hier een groot tempelcomplex, waarvan resten onder de huidige Grote Kerk gevonden zijn. Daarnaast is Elst de naamgever van de bekende appelen, de Elstar.
- </p>
- <img src=elst_grotekerk.JPG width=400px alt="Grote Kerk van Elst"><br>
- De Grote Kerk van Elst.
+ <h2>De naam van het artikel</h2> 
 </article>
-<footer>hier komen alle gegevens die in een normale footer staan.<br>
-&copy; Erik Haan
+<footer class=red>&copy; Erik Haan. Hier komen verder nog allerlei gegevens die in een normale footer staan.
 </footer>
+<script
+src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js
+integrity=sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0
+crossorigin=anonymous>
+</script>
 </body>
 </html>
