--- a/overmij.htm
+++ b/overmij.htm
@@ -12,7 +12,6 @@ href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.c
 rel=stylesheet
 integrity=sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl
 crossorigin=anonymous>
- <title>Contactformulier</title>
  <style>
 .btn {
  border-radius: 5px;
@@ -22,6 +21,7 @@ footer {
  color: white;
 }
 </style>
+ <title>Over mij</title>
 </head>
 <body class="d-flex h-100 text-center text-dark bg-green">
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -30,57 +30,30 @@ footer {
 <h3 class="float-md-start mb-0">Mijn pagina</h3>
 <nav class="nav nav-masthead justify-content-center float-md-end">
 <a class="nav-link active" aria-current=page href=index.html>Thuis</a>
-<a class=nav-link href=overmij.htm>Over mij</a>
+<a class=nav-link href=contact.htm>Contact</a>
 </nav>
 </div>
 </header>
 <main class=px-3>
-<h1>Neem contact met mij op via het onderstaande formulier!</h1>
-<img src=../img/forsythia.jpg alt=Forsythia class=img-thumbnail width=200>
+<h1>Wetenswaardigheden</h1>
+<img src=../img/oleander001.jpg alt=Oleander class=img-thumbnail width=200>
 <p class=lead>
 <div class=container>
 <div class="row row-cols-3">
 <div class=col></div>
-<div class=col>
-<form method=post action=#>
-<table>
-<tr>
-<td>Naam: </td>
-<td><input type=text name=naam placeholder="Mijn naam"></td>
-</tr>
-<tr>
-<td>Adres: </td>
-<td><input type=text name=adres placeholder="Straatnaam en huisnummer"></td>
-</tr>
-<tr>
-<td>Woonplaats: </td>
-<td><input type=text name=woonplaats placeholder="Mijn woonplaats"></td>
-</tr>
-<tr>
-<td>e-mail: </td>
-<td><input type=email name=e-mailadres placeholder="Mijn e-mailadres">
-</td>
-</tr>
-<tr>
-<td colspan=2><button type=submit name=Verzendknop>
-<strong>Verzend</strong></button></td>
-</tr>
-</table>
-</form>
+<div class=col>Hier kan ik eventueel, als ik daar zin in heb, een aantal dingen over mijzelf zetten, maar ik weet niet wat ik over mijzelf zou kunnen zeggen wat ook nog interessant is voor andere mensen. Daarom houd ik het hierbij. Deze pagina heb ik gemaakt met Bootstrap, dat kan ik in ieder geval wel zeggen. De foto hierboven heb ik afgelopen zomer gemaakt. Het is mijn eigen oleander die ik dat jaar gekocht heb als klein plantje en die het blijkbaar goed naar zijn zin gehad heeft, want hij heeft de hele zomer prachtig gebloeid. Momenteel staat hij nog steeds op het balkon, want oleanders hebben een rustperiode nodig. Hij staat goed beschermd en gelukkig heeft het de afgelopen winter niet al te hard gevroren, want bij matige vorst moeten ze bij voorkeur wel naar binnen, maar een paar graden vorst kunnen ze wel hebben. Houd je ze echter binnen, dan is de kans groot dat ze te warm staan en als ze te warm staan, blijven ze doorgroeien en komen ze niet meer in bloei. Ze zijn dus voor onze moderne huizen vrij lastig, omdat wij nu eenmaal in onze met centrale verwarming verwarmde huizen geen plekken meer hebben waar de temperatuur constant onder de 15 graden is. 
 </div>
 <div class=col></div>
 <div>
 </div>
 <p class=lead>
-<a href=#
+<a href=index.html
 class="btn btn-lg btn-secondary fw-bold border-white bg-green">
-Dit is niets.</a>
+Start</a>
 </p>
 </main>
-<footer> <!--class="mt-auto text-dark-50" -->
-<p>Deze pagina is gemaakt met Bootstrap. Bekijk de originele template of andere gratis Bootstrap-templates op <a href=https://getbootstrap.com/ class=text-dark>Bootstrap</a>
+<footer>hier komen alle gegevens die in een normale footer staan.
 </footer>
-</div>
 <script
 src=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js
 integrity=sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0
