--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@ Contact</a></nav>
 Scroll verder door naar beneden, ik slaag er niet in om de rijen mooi op elkaar aan te laten sluiten en ik heb nu geen zin om uit te zoeken hoe ik dat voor elkaar krijg.
   </div>
   <div class=col-sm-3>
-   <img src=../img/ijsselbijbronkhorst.jpg alt=Rivierenlandschap>
+   <img src=/img/ijsselbijbronkhorst.jpg alt=Rivierenlandschap>
    De IJssel bij Bronkhorst.
   </div>
   <div class=col-sm-3>
-   <img src=../img/amaryllis023.jpg alt=Amaryllis>
+   <img src=/img/amaryllis023.jpg alt=Amaryllis>
    Amaryllis.
   </div>
   <div class=col-sm-4>
-   <img src=../img/nijmegen222.jpg alt="Maas Waal Kanaal bij Nijmegen">
+   <img src=/img/nijmegen222.jpg alt="Maas Waal Kanaal bij Nijmegen">
    Maas-Waal Kanaal bij Nijmegen.
   </div>
  </div>
@@ -53,15 +53,15 @@ Scroll verder door naar beneden, ik slaag er niet in om de rijen mooi op elkaar 
   <div class=col-sm-2>
   </div>
   <div class=col-sm-3>
-   <img src=../img/forsythia.jpg alt=Forsythia>
+   <img src=/img/forsythia.jpg alt=Forsythia>
    Forsythia.
   </div>
   <div class=col-sm-3>
-   <img src=../img/oleanderzaaddoos.jpg alt="Zaadoos van de oleander">
+   <img src=/img/oleanderzaaddoos.jpg alt="Zaadoos van de oleander">
    Zaaddoos van de oleander.
   </div>
   <div class=col-sm-4>
-   <img src=../img/sintjandenbosch222.jpg alt="Sint Jan Den Bosch">
+   <img src=/img/sintjandenbosch222.jpg alt="Sint Jan Den Bosch">
    De Sint Jan in Den Bosch.
   </div>
  </div>
@@ -69,15 +69,15 @@ Scroll verder door naar beneden, ik slaag er niet in om de rijen mooi op elkaar 
   <div class=col-sm-2>
   </div>
   <div class=col-sm-3>
-   <img src=../img/bloesem002.jpg alt=Bloesem>
+   <img src=/img/bloesem002.jpg alt=Bloesem>
    Lente in het land.
   </div>
   <div class=col-sm-3>
-   <img src=../img/oleander024.jpg alt=Oleander>
+   <img src=/img/oleander024.jpg alt=Oleander>
    Oleander in de winter.
   </div>
   <div class=col-sm-4>
-   <img src=../img/denbosch222.jpg alt="Den Bosch">
+   <img src=/img/denbosch222.jpg alt="Den Bosch">
    Marktplein in Den Bosch.
   </div>
  </div>
