--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ href=https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.c
 rel=stylesheet
 integrity=sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl
 crossorigin=anonymous>
- <title>Huiswerkopgave les 22</title>
+ <title>Mijn pagina</title>
 <style>
  .red {
   background: red;
