--- a/contact.htm
+++ b/contact.htm
@@ -36,7 +36,7 @@ footer {
 </header>
 <main class=px-3>
 <h1>Neem contact met mij op via het onderstaande formulier!</h1>
-<img src=../img/forsythia.jpg alt=Forsythia class=img-thumbnail width=200>
+<img src=img/forsythia.jpg alt=Forsythia class=img-thumbnail width=200>
 <p class=lead>
 <div class=container>
 <div class="row row-cols-3">
