--- a/overmij.htm
+++ b/overmij.htm
@@ -36,7 +36,7 @@ footer {
 </header>
 <main class=px-3>
 <h1>Wetenswaardigheden</h1>
-<img src=../img/oleander001.jpg alt=Oleander class=img-thumbnail width=200>
+<img src=img/oleander001.jpg alt=Oleander class=img-thumbnail width=200>
 <p class=lead>
 <div class=container>
 <div class="row row-cols-3">
