--- a/verbergplaatjes.htm
+++ b/verbergplaatjes.htm
@@ -48,8 +48,8 @@
 <header>
  <h1>Laat de plaatjes op magische wijze verdwijnen</h1>
 </header>
-<img src=../img/denbosch222.jpg width=250 alt="Den Bosch">
-<img src=../img/ijsselbijbronkhorst.jpg width=250 alt="IJssel bij Bronkhorst">
+<img src=img/denbosch222.jpg width=250 alt="Den Bosch">
+<img src=img/ijsselbijbronkhorst.jpg width=250 alt="IJssel bij Bronkhorst">
 <p>
 Hier staan twee plaatjes, die ik met een druk op de rode knop op magische wijze laat verdwijnen.<br>
 Druk op de groene knop en de plaatjes verschijnen weer.
